--- a/trivy-java-db/Dockerfile
+++ b/trivy-java-db/Dockerfile
@@ -1,5 +1,5 @@
-FROM ghcr.io/oras-project/oras:v1.1.0
-WORKDIR /tmp
-RUN oras pull ghcr.io/aquasecurity/trivy-db:2 && oras pull ghcr.io/aquasecurity/trivy-java-db:1
-CMD /bin/sh
+FROM aquasec/trivy
+MAINTAINER lajifeiwomoshu@aliyun.com
+RUN trivy image --download-java-db-only && trivy image --download-db-only
+CMD /bin/sh sleep 3600
 
